--- a/Notebooks/+tests.ipynb
+++ b/Notebooks/+tests.ipynb
@@ -35,6 +35,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([3, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "import torch\n",
+    "\n",
+    "# Sample tensor\n",
+    "distance = torch.tensor([5.1, 2.4, 3.7, 0.9, 6.2])\n",
+    "\n",
+    "# Get the indices of the two smallest values\n",
+    "values, indices = torch.topk(distance, k=2, largest=False)\n",
+    "\n",
+    "print(indices)  # tensor([3, 1])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -557,18 +582,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "from my_code import helper_functions as f\n",
     "\n",
-    "def numbers_to_strings(argument):\n",
-    "    switcher = {\n",
-    "        0: \"zero\",\n",
-    "        1: \"one\",\n",
-    "        2: \"two\",\n",
-    "    }\n",
-    "    return switcher.get(argument, \"nothing\")"
+    "number_to_letter = {v:k for k,v in f.letter_to_number.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: 'G',\n",
+       " 1: 'I',\n",
+       " 2: 'L',\n",
+       " 3: 'M',\n",
+       " 4: 'F',\n",
+       " 5: 'W',\n",
+       " 6: 'Y',\n",
+       " 7: 'V',\n",
+       " 8: 'R',\n",
+       " 9: 'K',\n",
+       " 10: 'S',\n",
+       " 11: 'T',\n",
+       " 12: 'N',\n",
+       " 13: 'Q',\n",
+       " 14: 'H',\n",
+       " 15: 'A',\n",
+       " 16: 'C',\n",
+       " 17: 'D',\n",
+       " 18: 'E'}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "number_to_letter"
    ]
   }
  ],
