--- a/Notebooks/_Connection.ipynb
+++ b/Notebooks/_Connection.ipynb
@@ -75,24 +75,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Enumerating objects: 7, done.\u001b[K\n",
-      "remote: Counting objects: 100% (7/7), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (1/1), done.\u001b[K\n",
-      "remote: Total 4 (delta 3), reused 4 (delta 3), pack-reused 0\u001b[K\n",
-      "Unpacking objects: 100% (4/4), 358 bytes | 51.00 KiB/s, done.\n",
+      "remote: Enumerating objects: 22, done.\u001b[K\n",
+      "remote: Counting objects: 100% (22/22), done.\u001b[K\n",
+      "remote: Compressing objects: 100% (5/5), done.\u001b[K\n",
+      "remote: Total 13 (delta 9), reused 12 (delta 8), pack-reused 0\u001b[K\n",
+      "Unpacking objects: 100% (13/13), 324.97 KiB | 3.53 MiB/s, done.\n",
       "From github.com:raulconchello/peptide-QML\n",
-      "   e143aa28a..c7cd4b597  main       -> origin/main\n",
-      "Updating e143aa28a..c7cd4b597\n",
+      "   c7cd4b597..410938e76  main       -> origin/main\n",
+      "Updating c7cd4b597..410938e76\n",
       "Fast-forward\n",
-      " my_code/pytorch_model.py | 1 \u001b[31m-\u001b[m\n",
-      " 1 file changed, 1 deletion(-)\n"
+      " Notebooks/+tests.ipynb             |   16 \u001b[32m+\u001b[m\n",
+      " Notebooks/_Connection.ipynb        |   66 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+      " Notebooks/_nomenclature.ipynb      |    8 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+      " Notebooks/optimize input.ipynb     |   31 \u001b[32m+\u001b[m\u001b[31m-\u001b[m\n",
+      " Notebooks/sweep_6h_e_1qm_oi.ipynb  | 7283 \u001b[32m+++\u001b[m\u001b[31m---------------------------------\u001b[m\n",
+      " Notebooks/sweep_6h_er_1qm_oi.ipynb |  279 \u001b[32m++\u001b[m\n",
+      " my_code/helper_functions.py        |    4 \u001b[32m+\u001b[m\n",
+      " 7 files changed, 795 insertions(+), 6892 deletions(-)\n",
+      " create mode 100644 Notebooks/sweep_6h_er_1qm_oi.ipynb\n"
      ]
     }
    ],
@@ -135,18 +142,6 @@
    "display_name": "JL_Pennylane",
    "language": "python",
    "name": "jl_pennylane"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.8.10"
   },
   "orig_nbformat": 4
  },
