--- a/Notebooks/sweep_12h_er_Aqm.ipynb
+++ b/Notebooks/sweep_12h_er_Aqm.ipynb
@@ -82,14 +82,17 @@
      "text": [
       "\n",
       "\n",
-      " --- SWEEP POINT 9/108: (1, 1, 10, <class 'my_code.quantum_nodes.parts.Ansatz_full_conn'>) ---\n",
-      " --- time reamining: 1684:15:59.70 \n",
+      " --- SWEEP POINT 13/108: (1, 3, 1, <class 'my_code.quantum_nodes.parts.Ansatz_full_conn'>) ---\n",
+      " --- time reamining: 1500:00:14.70 \n",
       "\n"
      ]
     }
    ],
    "source": [
     "for sweep_point in sweep.points_left:\n",
+    "\n",
+    "    if sweep_point['block_n_layers'] > 7:\n",
+    "        continue\n",
     "\n",
     "    # print the point of the sweep\n",
     "    sweep.print_sweep_status(sweep_point['idx'])\n",
