--- a/Notebooks/+tests.ipynb
+++ b/Notebooks/+tests.ipynb
@@ -36,14 +36,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([3, 1])\n"
+      "tensor([3, 1]) [3, 1]\n"
      ]
     }
    ],
@@ -56,7 +56,7 @@
     "# Get the indices of the two smallest values\n",
     "values, indices = torch.topk(distance, k=2, largest=False)\n",
     "\n",
-    "print(indices)  # tensor([3, 1])"
+    "print(indices, indices.tolist())  # tensor([3, 1])"
    ]
   },
   {
