--- a/Notebooks/vae.ipynb
+++ b/Notebooks/vae.ipynb
@@ -318,6 +318,21 @@
     "        'save_name': 'vae_2_3.pickle',\n",
     "        'score_predictor': True,\n",
     "    },\n",
+    "    {\n",
+    "        'emb_dim': 200,\n",
+    "        'latent_dim': 16,\n",
+    "        'n_dense_layers': 1,\n",
+    "        'RNN_type': 'GRU',\n",
+    "        'RNN_units': [500],\n",
+    "        'bidirectional': True,\n",
+    "        'dropout': 0,\n",
+    "        'num_layers': 3,\n",
+    "        'one_hot': False,\n",
+    "        'n_epochs': 500,\n",
+    "        'lr': 3e-4,\n",
+    "        'save_name': 'vae_2_4.pickle',\n",
+    "        'score_predictor': True,\n",
+    "    },\n",
     "]"
    ]
   },
@@ -346,7 +361,263 @@
       "\n",
       "\n",
       "Epoch 1/500, \t train score predictor = True\n",
-      "Epoch 1/500, batch 82/5359, loss=1780.8793, \t total time left = 140h 12m 2s, \t epoch time left = 0h 16m 34s                          \r"
+      "Epoch 1/500, \t loss=1330.148796, \t loss test=358.598327, \t accuracy test=0.102362, \t loss score=784.720886,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 2/500, \t train score predictor = True\n",
+      "Epoch 2/500, \t loss=1024.833877, \t loss test=322.155840, \t accuracy test=0.111702, \t loss score=643.532593,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 3/500, \t train score predictor = True\n",
+      "Epoch 3/500, \t loss=873.446588, \t loss test=297.394291, \t accuracy test=0.118854, \t loss score=522.468201,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 4/500, \t train score predictor = False\n",
+      "Epoch 4/500, \t loss=290.746878, \t loss test=291.310269, \t accuracy test=0.119554, \t loss score=523.027405,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 5/500, \t train score predictor = True\n",
+      "Epoch 5/500, \t loss=749.059685, \t loss test=292.430184, \t accuracy test=0.118613, \t loss score=421.453064,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 6/500, \t train score predictor = False\n",
+      "Epoch 6/500, \t loss=283.686987, \t loss test=282.765978, \t accuracy test=0.127515, \t loss score=422.107361,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 7/500, \t train score predictor = False\n",
+      "Epoch 7/500, \t loss=281.135504, \t loss test=281.162303, \t accuracy test=0.131059, \t loss score=423.443665,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 8/500, \t train score predictor = False\n",
+      "Epoch 8/500, \t loss=279.287599, \t loss test=278.862894, \t accuracy test=0.134668, \t loss score=425.299225,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 9/500, \t train score predictor = True\n",
+      "Epoch 9/500, \t loss=649.363214, \t loss test=276.597835, \t accuracy test=0.137620, \t loss score=340.181885,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 10/500, \t train score predictor = True\n",
+      "Epoch 10/500, \t loss=577.846449, \t loss test=279.406759, \t accuracy test=0.138539, \t loss score=278.602051,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 11/500, \t train score predictor = False\n",
+      "Epoch 11/500, \t loss=275.344419, \t loss test=276.774049, \t accuracy test=0.149234, \t loss score=279.292114,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 12/500, \t train score predictor = True\n",
+      "Epoch 12/500, \t loss=525.076927, \t loss test=274.733678, \t accuracy test=0.145341, \t loss score=236.087936,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 13/500, \t train score predictor = True\n",
+      "Epoch 13/500, \t loss=489.800155, \t loss test=280.438255, \t accuracy test=0.142913, \t loss score=182.464096,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 14/500, \t train score predictor = True\n",
+      "Epoch 14/500, \t loss=422.597042, \t loss test=275.239009, \t accuracy test=0.148010, \t loss score=128.994080,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 15/500, \t train score predictor = False\n",
+      "Epoch 15/500, \t loss=269.885858, \t loss test=267.590436, \t accuracy test=0.188123, \t loss score=198.795822,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 16/500, \t train score predictor = False\n",
+      "Epoch 16/500, \t loss=265.245483, \t loss test=265.076903, \t accuracy test=0.209405, \t loss score=200.230316,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 17/500, \t train score predictor = False\n",
+      "Epoch 17/500, \t loss=263.944981, \t loss test=264.893635, \t accuracy test=0.210302, \t loss score=203.453995,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 18/500, \t train score predictor = True\n",
+      "Epoch 18/500, \t loss=385.633976, \t loss test=271.068438, \t accuracy test=0.179199, \t loss score=97.732430,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 19/500, \t train score predictor = True\n",
+      "Epoch 19/500, \t loss=351.132014, \t loss test=272.376624, \t accuracy test=0.176006, \t loss score=73.103432,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 20/500, \t train score predictor = True\n",
+      "Epoch 20/500, \t loss=327.553908, \t loss test=272.305955, \t accuracy test=0.176684, \t loss score=53.356037,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 21/500, \t train score predictor = False\n",
+      "Epoch 21/500, \t loss=262.993239, \t loss test=264.429183, \t accuracy test=0.218570, \t loss score=257.610168,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 22/500, \t train score predictor = False\n",
+      "Epoch 22/500, \t loss=260.769075, \t loss test=261.772785, \t accuracy test=0.232896, \t loss score=248.744553,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 23/500, \t train score predictor = True\n",
+      "Epoch 23/500, \t loss=310.568222, \t loss test=263.730955, \t accuracy test=0.219904, \t loss score=39.790379,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 24/500, \t train score predictor = False\n",
+      "Epoch 24/500, \t loss=259.517173, \t loss test=261.420948, \t accuracy test=0.232983, \t loss score=283.024689,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 25/500, \t train score predictor = False\n",
+      "Epoch 25/500, \t loss=255.080153, \t loss test=253.509957, \t accuracy test=0.263233, \t loss score=287.265381,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 26/500, \t train score predictor = False\n",
+      "Epoch 26/500, \t loss=251.151856, \t loss test=252.724918, \t accuracy test=0.267017, \t loss score=278.928741,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 27/500, \t train score predictor = False\n",
+      "Epoch 27/500, \t loss=248.649786, \t loss test=250.234022, \t accuracy test=0.280490, \t loss score=275.652313,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 28/500, \t train score predictor = False\n",
+      "Epoch 28/500, \t loss=247.012230, \t loss test=250.533678, \t accuracy test=0.286045, \t loss score=271.936005,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 29/500, \t train score predictor = False\n",
+      "Epoch 29/500, \t loss=245.517441, \t loss test=247.128707, \t accuracy test=0.292738, \t loss score=271.476013,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 30/500, \t train score predictor = False\n",
+      "Epoch 30/500, \t loss=244.547118, \t loss test=246.056332, \t accuracy test=0.306868, \t loss score=263.175842,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 31/500, \t train score predictor = False\n",
+      "Epoch 31/500, \t loss=243.894915, \t loss test=245.153068, \t accuracy test=0.306540, \t loss score=259.030334,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 32/500, \t train score predictor = False\n",
+      "Epoch 32/500, \t loss=243.151270, \t loss test=245.555741, \t accuracy test=0.309121, \t loss score=261.282043,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 33/500, \t train score predictor = False\n",
+      "Epoch 33/500, \t loss=242.716427, \t loss test=244.957628, \t accuracy test=0.320407, \t loss score=255.175400,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 34/500, \t train score predictor = False\n",
+      "Epoch 34/500, \t loss=242.242945, \t loss test=243.904134, \t accuracy test=0.311111, \t loss score=254.236053,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 35/500, \t train score predictor = False\n",
+      "Epoch 35/500, \t loss=241.723991, \t loss test=244.794291, \t accuracy test=0.318854, \t loss score=247.820343,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 36/500, \t train score predictor = False\n",
+      "Epoch 36/500, \t loss=241.281597, \t loss test=243.650886, \t accuracy test=0.326290, \t loss score=243.043243,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 37/500, \t train score predictor = False\n",
+      "Epoch 37/500, \t loss=240.839604, \t loss test=242.156841, \t accuracy test=0.329834, \t loss score=237.194687,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 38/500, \t train score predictor = False\n",
+      "Epoch 38/500, \t loss=240.482977, \t loss test=242.229265, \t accuracy test=0.329899, \t loss score=231.022003,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 39/500, \t train score predictor = False\n",
+      "Epoch 39/500, \t loss=240.170828, \t loss test=241.353035, \t accuracy test=0.341120, \t loss score=226.466858,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 40/500, \t train score predictor = False\n",
+      "Epoch 40/500, \t loss=239.882769, \t loss test=246.490420, \t accuracy test=0.314589, \t loss score=227.154648,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 41/500, \t train score predictor = False\n",
+      "Epoch 41/500, \t loss=239.783285, \t loss test=242.714354, \t accuracy test=0.325241, \t loss score=227.366409,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 42/500, \t train score predictor = False\n",
+      "Epoch 42/500, \t loss=239.478245, \t loss test=240.848737, \t accuracy test=0.345013, \t loss score=226.259338,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 43/500, \t train score predictor = False\n",
+      "Epoch 43/500, \t loss=239.427026, \t loss test=240.859203, \t accuracy test=0.340551, \t loss score=227.950760,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 44/500, \t train score predictor = False\n",
+      "Epoch 44/500, \t loss=239.161855, \t loss test=242.898360, \t accuracy test=0.336811, \t loss score=224.927170,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 45/500, \t train score predictor = True\n",
+      "Epoch 45/500, \t loss=325.705953, \t loss test=253.492503, \t accuracy test=0.240704, \t loss score=49.338566,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 46/500, \t train score predictor = False\n",
+      "Epoch 46/500, \t loss=244.073363, \t loss test=242.866814, \t accuracy test=0.308027, \t loss score=252.241730,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 47/500, \t train score predictor = True\n",
+      "Epoch 47/500, \t loss=293.093856, \t loss test=249.290289, \t accuracy test=0.270932, \t loss score=39.222099,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 48/500, \t train score predictor = False\n",
+      "Epoch 48/500, \t loss=240.642884, \t loss test=242.585712, \t accuracy test=0.318220, \t loss score=291.019135,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 49/500, \t train score predictor = True\n",
+      "Epoch 49/500, \t loss=278.682936, \t loss test=249.165502, \t accuracy test=0.297222, \t loss score=32.290039,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 50/500, \t train score predictor = False\n",
+      "Epoch 50/500, \t loss=239.538031, \t loss test=242.240059, \t accuracy test=0.330512, \t loss score=330.011688,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 51/500, \t train score predictor = False\n",
+      "Epoch 51/500, \t loss=238.446257, \t loss test=239.917487, \t accuracy test=0.350612, \t loss score=313.487366,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 52/500, \t train score predictor = False\n",
+      "Epoch 52/500, \t loss=236.870638, \t loss test=238.832218, \t accuracy test=0.364392, \t loss score=307.734436,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 53/500, \t train score predictor = True\n",
+      "Epoch 53/500, \t loss=274.007425, \t loss test=241.461565, \t accuracy test=0.339326, \t loss score=28.836063,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 54/500, \t train score predictor = False\n",
+      "Epoch 54/500, \t loss=237.575227, \t loss test=238.147195, \t accuracy test=0.379943, \t loss score=354.930786,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 55/500, \t train score predictor = False\n",
+      "Epoch 55/500, \t loss=235.994931, \t loss test=239.540486, \t accuracy test=0.371719, \t loss score=344.145599,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 56/500, \t train score predictor = False\n",
+      "Epoch 56/500, \t loss=235.588212, \t loss test=237.623983, \t accuracy test=0.393832, \t loss score=333.361816,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 57/500, \t train score predictor = False\n",
+      "Epoch 57/500, \t loss=235.200792, \t loss test=237.361663, \t accuracy test=0.395276, \t loss score=324.944489,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 58/500, \t train score predictor = False\n",
+      "Epoch 58/500, \t loss=235.422009, \t loss test=237.846900, \t accuracy test=0.394794, \t loss score=316.867889,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 59/500, \t train score predictor = False\n",
+      "Epoch 59/500, \t loss=234.855534, \t loss test=239.109367, \t accuracy test=0.370035, \t loss score=308.086426,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 60/500, \t train score predictor = False\n",
+      "Epoch 60/500, \t loss=234.549968, \t loss test=237.314879, \t accuracy test=0.394904, \t loss score=302.261688,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 61/500, \t train score predictor = True\n",
+      "Epoch 61/500, \t loss=276.734084, \t loss test=240.733005, \t accuracy test=0.347003, \t loss score=28.920862,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 62/500, \t train score predictor = False\n",
+      "Epoch 62/500, \t loss=235.631467, \t loss test=236.162073, \t accuracy test=0.406605, \t loss score=343.793152,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 63/500, \t train score predictor = False\n",
+      "Epoch 63/500, \t loss=234.300002, \t loss test=235.484367, \t accuracy test=0.422157, \t loss score=334.670013,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 64/500, \t train score predictor = False\n",
+      "Epoch 64/500, \t loss=234.048949, \t loss test=235.653461, \t accuracy test=0.423075, \t loss score=326.414307,                                                       \n",
+      "\n",
+      "\n",
+      "Epoch 65/500, \t train score predictor = False\n",
+      "Epoch 65/500, batch 5359/5359, loss=189.3165, \t total time left = 41h 8m 3s, \t epoch time left = 0h 0m 0s                            \r"
      ]
     }
    ],
@@ -398,7 +669,7 @@
     "        # train score predictor?\n",
     "        if sweep_point['score_predictor']:\n",
     "            train_score_predictor = torch.rand(1).item() < 1/4 if epoch > 2 else True\n",
-    "            print(f'\\n\\nEpoch {epoch+1}/{n_epochs}, \\t train score predictor = {train_score_predictor}')\n",
+    "            print(f'Epoch {epoch+1}/{n_epochs}, \\t train score predictor = {train_score_predictor}')\n",
     "        else:\n",
     "            train_score_predictor = False\n",
     "\n",
@@ -460,7 +731,7 @@
     "        # early stopping if loss(epoch) doesn't improve for 10 epochs\n",
     "        patience, min_delta = 5, 0.0001\n",
     "        if epoch > patience:\n",
-    "            loss_difference = q.np.mean(vae_model.losses['batch'][-patience:]) - vae_model.losses[-1]\n",
+    "            loss_difference = q.np.mean(vae_model.losses['batch'][-patience:]) - vae_model.losses['batch'][-1]\n",
     "            if loss_difference < min_delta:\n",
     "                print('Early stopping - epoch')\n",
     "                break\n",
