--- a/Notebooks/score_predictor.ipynb
+++ b/Notebooks/score_predictor.ipynb
@@ -24,7 +24,8 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from my_code import helper_classes as c\n",
-    "from my_code import quantum_nodes as q"
+    "from my_code import quantum_nodes as q\n",
+    "from my_code import vae.VAE as VAE"
    ]
   },
   {
@@ -70,9 +71,29 @@
     "        return F.mse_loss(SP_out, y.float(), reduction=reduction)\n",
     "    \n",
     "    def save(self, path):\n",
-    "        copy_of_self = c.copy.deepcopy(self).device('cpu')\n",
+    "        copy_of_self = c.copy.deepcopy(self).to('cpu')\n",
     "        copy_of_self.quantum_layer = None\n",
     "        torch.save(copy_of_self, path)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'vae_TEST.pickle'\n",
+    "vae_model = VAE.load(initial_path+'/saved/Pickle/VAE-'name)\n",
+    "score_predictor = ScorePredictor(latent_dim=vae_model.latent_dim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SP = ScorePredictor(6)"
    ]
   }
  ],
